changed welcome to hi

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>website official</title>
 <h1>this is so beautiful pic</h1>
-<p>welcome to this website</p>
+<p>hii to this website</p>
 <p>:) x)jaydeep sisodiya</p>
 </html>
